# cudaqx

./: .cudaq_version
.github/actions/build-lib/: build_all.sh  build_qec.sh
.github/actions/get-cudaq-build/: action.yaml
.github/actions/get-cudaq-wheels/: action.yaml
.github/workflows/: all_libs.yaml  all_libs_release.yaml  build_decoding_server_docker.yaml  build_dev.yaml  build_wheels.yaml  cudaq_cache.yaml  docs.yaml  lib_qec.yaml  lib_solvers.yaml  nightly_tests.yaml  pr_file_check.yaml  pr_workflow.yaml  sync.yml
docker/build_env/: cudaqx.dev.Dockerfile
docker/decoding-server/: Dockerfile
docs/: CMakeLists.txt  Doxyfile.in
docs/sphinx/: conf.py.in
docs/sphinx/api/core/: cpp_api.rst
docs/sphinx/api/qec/: chromobius_api.rst  cpp_api.rst  cpp_realtime_decoding_api.rst  nv_qldpc_decoder_api.rst  pymatching_api.rst  python_api.rst  python_realtime_decoding_api.rst  realtime_pipeline_api.rst  sliding_window_api.rst  tensor_network_decoder_api.rst  trt_decoder_api.rst
docs/sphinx/api/solvers/: cpp_api.rst
docs/sphinx/components/qec/: introduction.rst
docs/sphinx/examples/qec/cpp/: circuit_level_noise.cpp  dem_sampling.cpp  real_time_complete.cpp
docs/sphinx/examples/qec/python/: circuit_level_noise.py  dem_sampling.py  real_time_complete.py
docs/sphinx/examples_rst/qec/: decoders.rst  dem_sampling.rst  examples.rst  realtime_decoding.rst  realtime_relay_bp.rst
libs/core/include/cuda-qx/core/: extension_point.h  graph.h  heterogeneous_map.h  kwargs_utils.h  tensor.h  tensor_impl.h
libs/core/unittests/: test_core.cpp
libs/qec/: CMakeLists.txt  pyproject.toml.cu12  pyproject.toml.cu13
libs/qec/include/cudaq/qec/: code.h  decoder.h  decoder_config_schema.h  dem_sampling.h  detector_error_model.h  experiments.h  pcm_utils.h  sparse_binary_matrix.h
libs/qec/include/cudaq/qec/codes/: surface_code.h
libs/qec/include/cudaq/qec/realtime/: decoder_rpc_wire_format.h  decoding_config.h  mock_decode_handler.cuh  mock_decode_setup.h
libs/qec/lib/: CMakeLists.txt  code.cpp  decoder.cpp  decoder_config_schema.cpp  detector_error_model.cpp  experiments.cpp  hardware_guards.h  logger_forwarder.cpp  pcm_utils.cpp  round_layout.h  sparse_binary_matrix.cpp
libs/qec/lib/codes/: surface_code.cpp  surface_code_device.cpp
libs/qec/lib/decoders/: lut.cpp  single_error_lut.cpp  sliding_window.cpp  sliding_window.h
libs/qec/lib/decoders/plugins/chromobius/: chromobius.cpp
libs/qec/lib/decoders/plugins/example/: single_error_lut_example.cpp
libs/qec/lib/decoders/plugins/pymatching/: CMakeLists.txt  pymatching.cpp
libs/qec/lib/decoders/plugins/trt_decoder/: trt_decoder.cpp
libs/qec/lib/device/: memory_circuit.cpp  memory_circuit.h
libs/qec/lib/realtime/: CMakeLists.txt  config.cpp  mock_decode_handler.cu  per_decoder_rings_design.md  per_decoder_rings_validation_notes.md  qec_realtime_session.cpp  qec_realtime_session.h  realtime_decoding.cpp  rpc_producer.cpp  rpc_producer.h  transport_provider_design.md
libs/qec/lib/realtime/decoding-server-cqr/: CMakeLists.txt  CpuRoceTransceiver.cpp  CqrTransceiver.h  DecodingServer.cpp  DecodingServer.h  DecodingSession.cpp  DecodingSession.h  DeviceGraphFactory.cpp  DeviceGraphLinkCheck.cpp  DeviceGraphRingConsumer.cpp  DeviceGraphRingConsumer.h  DeviceGraphTransceiver.cpp  DeviceGraphTransceiver.h  GpuRoceFactory.cpp  GpuRoceLinkCheck.cpp  GpuRoceTransceiver.cpp  GpuRoceTransceiver.h  ITransceiver.h  RpcDispatcher.cpp  RpcDispatcher.h  SessionRegistry.cpp  SessionRegistry.h  decoding_server_cqr.cpp
libs/qec/lib/realtime/simulation-cqr/: simulation_cqr_device.cpp
libs/qec/python/bindings/: py_code.cpp  py_decoder.cpp  py_decoding_config.cpp  py_dem_sampling.cpp  py_surface_code.cpp  type_casters.h
libs/qec/python/cudaq_qec/: __init__.py  _compat.py  dem_sampling.py
libs/qec/python/cudaq_qec/plugins/decoders/: tensor_network_decoder.py
libs/qec/python/cudaq_qec/plugins/decoders/tensor_network_utils/: noise_models.py
libs/qec/python/tests/: test_code.py  test_decoder.py  test_decoders_yaml.py  test_decoding_config.py  test_decoding_config_deprecated.py  test_dem.py  test_sliding_window.py  test_tensor_network_decoder.py  test_trt_decoder.py
libs/qec/tools/decoding-server/: CMakeLists.txt  decoding_server.cpp
libs/qec/unittests/: CMakeLists.txt  test_decoders.cpp  test_decoders_yaml.cpp  test_decoding_server_core.cpp  test_qec.cpp  test_sparse_binary_matrix.cpp
libs/qec/unittests/backend-specific/stim/: CMakeLists.txt  test_qec_stim.cpp
libs/qec/unittests/decoders/: sample_decoder.cpp
libs/qec/unittests/decoders/pymatching/: CMakeLists.txt  test_pymatching.cpp  test_pymatching_device_call_realtime.cpp  test_pymatching_realtime.cpp
libs/qec/unittests/decoders/realtime/: bench_preprocess_all.cu  bench_preprocess_all_data.h  test_realtime_decoding.cu
libs/qec/unittests/decoders/trt_decoder/: generate_trt_decoder_onnx.py  test_trt_decoder.cpp
libs/qec/unittests/realtime/: mock_decode_handler.cu  mock_decode_setup.h  test_decoding_server.cpp
libs/qec/unittests/realtime/app_examples/: CMakeLists.txt  prepare_ising_artifacts.py  surface_code-1-cqr-two-process-test.sh  surface_code-1-test.py  surface_code-1-test.sh  surface_code-1.cpp  surface_code-2.cpp  surface_code-3.cpp  surface_code-4-yaml-mixed-dispatch-test.sh  surface_code-4-yaml-test.sh  surface_code-4-yaml.cpp  surface_code-5-per-decoder-rings-test.sh  surface_code-5-per-decoder-rings.cpp  surface_code_1.py
libs/qec/unittests/realtime/qec_graph_decode_test/: test_realtime_qldpc_graph_decoding.cpp
libs/qec/unittests/utils/: CMakeLists.txt  hololink_fpga_syndrome_playback.cpp  hololink_qldpc_graph_decoder_bridge.cpp  hsb_fpga_decoding_server_test.sh
libs/solvers/: CMakeLists.txt  pyproject.toml.cu12  pyproject.toml.cu13
libs/solvers/include/cudaq/solvers/: observe_gradient.h
scripts/: build_cudaq_with_realtime.sh  build_docs.sh  cudaq_realtime_cmake_flags.sh  install_cudaq_with_realtime.sh
scripts/ci/: test_examples.sh  test_wheels.sh
