# ============================================================================ #
# Copyright (c) 2026 NVIDIA Corporation & Affiliates.                          #
# All rights reserved.                                                         #
#                                                                              #
# This source code and the accompanying materials are made available under     #
# the terms of the Apache License 2.0 which accompanies this distribution.     #
# ============================================================================ #

# Handle both standalone (libs/qec) and full-repo builds.
if(CUDAQX_QEC_STANDALONE_BUILD)
  set(_core_include_dir "${CMAKE_SOURCE_DIR}/../core/include")
else()
  set(_core_include_dir "${CMAKE_SOURCE_DIR}/libs/core/include")
endif()

# ---------------------------------------------------------------------------
# Optional: device_graph dispatch via the CUDA-Q realtime bridge-provider
# interface.
#
# The Hololink transceiver sits behind a runtime-loaded provider
# (libcudaq-realtime-bridge-hololink.so, built in cuda-quantum where
# HSB + DOCA are provisioned), so compiling this path needs only the CUDA-Q
# realtime headers, libcudaq-realtime.so (the bridge loader + C API), and the
# CUDA toolkit -- NO Hololink / DOCA / HSB build-time dependencies here.  The
# provider .so is resolved at runtime (dlopen), so a build without it still
# produces a server whose device_graph mode fails loudly at startup.
#
# cudaq-realtime-dispatch (the device-graph scheduler shims resolved via
# dlsym) is found here for the server target's link; see
# tools/decoding-server/CMakeLists.txt.
# ---------------------------------------------------------------------------
set(CUDAQ_QEC_DEVICE_GRAPH_AVAILABLE FALSE)

if(CUDAQ_REALTIME_INCLUDE_DIR)
  if(CUDAQ_REALTIME_LIBRARY)
    get_filename_component(_cudaq_rt_lib_dir "${CUDAQ_REALTIME_LIBRARY}" DIRECTORY)
  else()
    get_filename_component(_cudaq_rt_lib_dir "${CUDAQ_REALTIME_INCLUDE_DIR}/../lib" ABSOLUTE)
  endif()
  find_library(CUDAQ_QEC_REALTIME_BRIDGE_API_LIBRARY
    NAMES cudaq-realtime
    HINTS "${_cudaq_rt_lib_dir}"
    NO_DEFAULT_PATH)

  # cudaq-realtime-dispatch: declares cudaq_create_dispatch_graph_regular,
  # cudaq_launch_dispatch_graph, cudaq_destroy_dispatch_graph, cudaq_function_entry_t.
  find_library(CUDAQ_REALTIME_DISPATCH_LIBRARY
    NAMES cudaq-realtime-dispatch
    HINTS "${_cudaq_rt_lib_dir}"
    NO_DEFAULT_PATH)

  if(CUDAQ_QEC_REALTIME_BRIDGE_API_LIBRARY AND CUDAQ_REALTIME_DISPATCH_LIBRARY
      AND CUDAToolkit_FOUND)
    set(CUDAQ_QEC_DEVICE_GRAPH_AVAILABLE TRUE CACHE INTERNAL
      "device-graph dispatch component cudaq-qec-decoding-server-device-graph available")
    # Under CMP0126 (NEW) the CACHE set above does NOT update the normal
    # variable initialized FALSE at the top of this file, and the normal
    # variable shadows the cache in this scope -- so the component gate
    # below would never fire.  Set the normal variable explicitly.
    set(CUDAQ_QEC_DEVICE_GRAPH_AVAILABLE TRUE)
    message(STATUS
      "cudaq-qec-decoding-server-device-graph: device_graph dispatch ENABLED "
      "(bridge provider resolved at runtime; api=${CUDAQ_QEC_REALTIME_BRIDGE_API_LIBRARY})")
  else()
    message(STATUS
      "cudaq-qec-decoding-server: device_graph dispatch DISABLED "
      "(missing one or more of: libcudaq-realtime "
      "cudaq-realtime-dispatch CUDA toolkit)")
  endif()
else()
  message(STATUS
    "cudaq-qec-decoding-server: device_graph dispatch DISABLED "
    "(CUDAQ_REALTIME_INCLUDE_DIR not set)")
endif()

message(STATUS
  "cudaq-qec-decoding-server: CPU RoCE DISABLED (skeleton only; ibverbs implementation pending)")

# ---------------------------------------------------------------------------
# Core decoding server (always built): transport abstraction, session registry,
# per-decoder worker threads, RPC dispatcher.  No dependency on CUDAQ_REALTIME.
#
# Deliberately excludes DeviceGraphTransceiver: consumers of this library (unit
# tests, the CQR plugin) must stay loadable on driverless machines, and the
# GPU RoCE deps (DOCA, the hololink bridge) require libcuda.so.1 at load
# time.  gpu_roce lives in the cudaq-qec-decoding-server-device-graph component
# below, reached through a weak factory symbol (see DecodingServer.cpp).
# ---------------------------------------------------------------------------
add_library(cudaq-qec-decoding-server STATIC
  RoundAccumulator.cpp
  DecodingSession.cpp
  SessionRegistry.cpp
  RpcDispatcher.cpp
  DecodingServer.cpp
  CpuRoceTransceiver.cpp
)

target_compile_features(cudaq-qec-decoding-server PUBLIC cxx_std_20)

target_include_directories(cudaq-qec-decoding-server
  PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
    $<BUILD_INTERFACE:${CUDAQX_QEC_INCLUDE_DIR}>
    $<BUILD_INTERFACE:${_core_include_dir}>
    $<INSTALL_INTERFACE:include>
)

target_link_libraries(cudaq-qec-decoding-server
  PUBLIC
    # The decode-server core only needs the decoder interface + logger (in
    # cudaq-qec-decoders) and the realtime decoding config -- NOT the heavy
    # cudaq-qec (which pulls in libcustabilizer etc.). Keeping cudaq-qec here
    # violates the realtime-server dependency-closure contract.
    cudaq-qec-decoders
    cudaq-qec-realtime-decoding
)

set_target_properties(cudaq-qec-decoding-server PROPERTIES
  ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
  POSITION_INDEPENDENT_CODE ON
)

install(TARGETS cudaq-qec-decoding-server
  COMPONENT qec-lib
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
)

# ---------------------------------------------------------------------------
# Optional device-graph dispatch component: DeviceGraphTransceiver plus the strong definition
# (DeviceGraphFactory.cpp) of the factory that DecodingServer.cpp references
# weakly.  Kept out of the core library so core consumers stay loadable on
# machines without the CUDA runtime.  The transport itself is a runtime-
# loaded bridge provider (libcudaq-realtime-bridge-hololink.so or a
# CUDAQ_REALTIME_BRIDGE_LIB drop-in), so this component links only the
# CUDA-Q realtime bridge C API and the CUDA runtime -- no Hololink / DOCA /
# HSB link-time dependencies.
#
# Consumers must link this WHOLE_ARCHIVE: the only reference to the factory
# is weak, which does not pull archive members on its own.
# ---------------------------------------------------------------------------
if(CUDAQ_QEC_DEVICE_GRAPH_AVAILABLE)
  add_library(cudaq-qec-decoding-server-device-graph STATIC
    DeviceGraphTransceiver.cpp
    DeviceGraphFactory.cpp
  )

  target_compile_definitions(cudaq-qec-decoding-server-device-graph
    PRIVATE CUDAQ_QEC_DEVICE_GRAPH_AVAILABLE)

  target_include_directories(cudaq-qec-decoding-server-device-graph PRIVATE
    "${CUDAQ_REALTIME_INCLUDE_DIR}"
    ${CUDAToolkit_INCLUDE_DIRS}
  )

  target_link_libraries(cudaq-qec-decoding-server-device-graph
    PUBLIC
      cudaq-qec-decoding-server
      "${CUDAQ_QEC_REALTIME_BRIDGE_API_LIBRARY}"
      CUDA::cudart
  )

  set_target_properties(cudaq-qec-decoding-server-device-graph PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
    POSITION_INDEPENDENT_CODE ON
  )

  install(TARGETS cudaq-qec-decoding-server-device-graph
    COMPONENT qec-lib
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
  )

  # Link canary (never executed, not installed, not a test): a static
  # archive alone never resolves symbols, and the one real consumer
  # (decoding_server's gpu_roce block) is additionally gated on the
  # proprietary cudevice archive, which CI does not provision.  Without
  # this target, nothing would validate the component's link against the
  # CUDA-Q realtime bridge API.  The strong factory reference pulls the
  # component's members, and the component's PUBLIC deps complete the
  # resolution.
  add_executable(cudaq-qec-decoding-server-device-graph-linkcheck
    DeviceGraphLinkCheck.cpp
  )
  target_link_libraries(cudaq-qec-decoding-server-device-graph-linkcheck PRIVATE
    cudaq-qec-decoding-server-device-graph
  )
endif()

# ---------------------------------------------------------------------------
# CQR host-dispatch plugin (only when CUDAQ device_call headers are available):
# CqrTransceiver bridges DeviceCallService handler callbacks to ITransceiver,
# then hands off to DecodingServer for session management and decoding.
# ---------------------------------------------------------------------------
if(CUDAQ_QEC_DEVICE_CALL_SERVICE_AVAILABLE)
  add_library(cudaq-qec-realtime-decoding-server-cqr SHARED
    decoding_server_cqr.cpp
  )

  target_compile_options(cudaq-qec-realtime-decoding-server-cqr
    PRIVATE -fvisibility=hidden -fvisibility-inlines-hidden)

  target_include_directories(cudaq-qec-realtime-decoding-server-cqr
    PUBLIC
      $<BUILD_INTERFACE:${CUDAQX_QEC_INCLUDE_DIR}>
      $<INSTALL_INTERFACE:${CUDAQ_INCLUDE_DIR}>
      $<INSTALL_INTERFACE:include>
    PRIVATE
      ${CMAKE_CURRENT_SOURCE_DIR}
      ${CUDAQ_REALTIME_INCLUDE_DIR}
      ${CUDAQ_DEVICE_CALL_INCLUDE_DIR}
      ${CUDAToolkit_INCLUDE_DIRS}
  )

  target_link_options(cudaq-qec-realtime-decoding-server-cqr PRIVATE
    $<$<CXX_COMPILER_ID:GNU>:-Wl,--exclude-libs,libcudaq-qec-decoding-server.a>
  )

  target_link_libraries(cudaq-qec-realtime-decoding-server-cqr
    PUBLIC
      cudaq-qec-realtime-decoding
    PRIVATE
      cudaq-qec-decoding-server
      cudaq::cudaq-common
      ${CUDAQ_DEVICE_CALL_RUNTIME_LIBRARY}
  )

  set(_server_cqr_build_rpath "${CMAKE_BINARY_DIR}/lib")
  set(_server_cqr_install_rpath
    "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}")
  if(_CUDAQ_REALTIME_LIB_DIR)
    list(APPEND _server_cqr_build_rpath "${_CUDAQ_REALTIME_LIB_DIR}")
    list(APPEND _server_cqr_install_rpath "${_CUDAQ_REALTIME_LIB_DIR}")
  endif()
  if(_CUDAQ_DEVICE_CALL_RUNTIME_LIB_DIR)
    list(APPEND _server_cqr_build_rpath "${_CUDAQ_DEVICE_CALL_RUNTIME_LIB_DIR}")
    list(APPEND _server_cqr_install_rpath
      "${_CUDAQ_DEVICE_CALL_RUNTIME_LIB_DIR}")
  endif()

  set_target_properties(cudaq-qec-realtime-decoding-server-cqr PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
    BUILD_RPATH "${_server_cqr_build_rpath}"
    INSTALL_RPATH "${_server_cqr_install_rpath}"
  )

  install(TARGETS cudaq-qec-realtime-decoding-server-cqr
    COMPONENT qec-lib
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
  )
endif()
