# ============================================================================ #
# Copyright (c) 2026 NVIDIA Corporation & Affiliates.                          #
# All rights reserved.                                                         #
#                                                                              #
# This source code and the accompanying materials are made available under     #
# the terms of the Apache License 2.0 which accompanies this distribution.     #
# ============================================================================ #

# Handle both standalone (libs/qec) and full-repo builds.
if(CUDAQX_QEC_STANDALONE_BUILD)
  set(_core_include_dir "${CMAKE_SOURCE_DIR}/../core/include")
else()
  set(_core_include_dir "${CMAKE_SOURCE_DIR}/libs/core/include")
endif()

# ---------------------------------------------------------------------------
# Optional: GPU RoCE transport via Hololink Sensor Bridge + DOCA
#
# Library names and DOCA path mirror libs/qec/unittests/utils/CMakeLists.txt
# (the existing hololink_qldpc_graph_decoder_bridge target) so both targets
# find the same libraries from the same build tree.
# ---------------------------------------------------------------------------
set(CUDAQ_GPU_ROCE_AVAILABLE FALSE)

if(HOLOSCAN_SENSOR_BRIDGE_BUILD_DIR AND CUDAQ_REALTIME_INCLUDE_DIR)
  find_library(HOLOLINK_CORE_LIB
    NAMES hololink_core
    PATHS "${HOLOSCAN_SENSOR_BRIDGE_BUILD_DIR}"
          "${HOLOSCAN_SENSOR_BRIDGE_BUILD_DIR}/src/hololink/core"
          "${HOLOSCAN_SENSOR_BRIDGE_BUILD_DIR}/lib"
    NO_DEFAULT_PATH)

  find_library(GPU_ROCE_TRANSCEIVER_LIB
    NAMES gpu_roce_transceiver
    PATHS "${HOLOSCAN_SENSOR_BRIDGE_BUILD_DIR}"
          "${HOLOSCAN_SENSOR_BRIDGE_BUILD_DIR}/src/hololink/operators/gpu_roce_transceiver"
          "${HOLOSCAN_SENSOR_BRIDGE_BUILD_DIR}/lib"
    NO_DEFAULT_PATH)

  find_library(HOLOLINK_COMMON_LIB
    NAMES hololink
    PATHS "${HOLOSCAN_SENSOR_BRIDGE_BUILD_DIR}"
          "${HOLOSCAN_SENSOR_BRIDGE_BUILD_DIR}/src/hololink/common"
          "${HOLOSCAN_SENSOR_BRIDGE_BUILD_DIR}/lib"
    NO_DEFAULT_PATH)

  find_library(BASE_RECEIVER_OP_LIB
    NAMES base_receiver_op
    PATHS "${HOLOSCAN_SENSOR_BRIDGE_BUILD_DIR}"
          "${HOLOSCAN_SENSOR_BRIDGE_BUILD_DIR}/src/hololink/operators"
          "${HOLOSCAN_SENSOR_BRIDGE_BUILD_DIR}/lib"
    NO_DEFAULT_PATH)

  find_library(IBVERBS_LIB NAMES ibverbs)

  # DOCA at the standard Mellanox install path.
  # Arch-specific lib dir mirrors libs/qec/unittests/utils/CMakeLists.txt.
  set(_doca_root "/opt/mellanox/doca")
  if(CMAKE_SYSTEM_PROCESSOR MATCHES "(x86_64)|(AMD64|amd64)")
    set(_doca_lib_dir "${_doca_root}/lib/x86_64-linux-gnu")
  elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "(aarch64)|(arm64)")
    set(_doca_lib_dir "${_doca_root}/lib/aarch64-linux-gnu")
  else()
    set(_doca_lib_dir "${_doca_root}/lib")
  endif()
  find_library(DOCA_VERBS_LIB   doca_verbs   PATHS "${_doca_lib_dir}" NO_DEFAULT_PATH)
  find_library(DOCA_GPUNETIO_LIB doca_gpunetio PATHS "${_doca_lib_dir}" NO_DEFAULT_PATH)
  find_library(DOCA_COMMON_LIB  doca_common  PATHS "${_doca_lib_dir}" NO_DEFAULT_PATH)

  # hololink_wrapper.h lives in CUDAQ_REALTIME_INCLUDE_DIR.
  # Derive the lib search dir from the already-found CUDAQ_REALTIME_LIBRARY
  # (set by the parent CMakeLists or the CQR plugin detection above).
  if(CUDAQ_REALTIME_LIBRARY)
    get_filename_component(_cudaq_rt_lib_dir "${CUDAQ_REALTIME_LIBRARY}" DIRECTORY)
  else()
    get_filename_component(_cudaq_rt_lib_dir "${CUDAQ_REALTIME_INCLUDE_DIR}/../lib" ABSOLUTE)
  endif()
  find_library(CUDAQ_REALTIME_BRIDGE_HOLOLINK_LIBRARY
    NAMES cudaq-realtime-bridge-hololink
    HINTS "${_cudaq_rt_lib_dir}"
    NO_DEFAULT_PATH)

  # cudaq-realtime-dispatch: declares cudaq_create_dispatch_graph_regular,
  # cudaq_launch_dispatch_graph, cudaq_destroy_dispatch_graph, cudaq_function_entry_t.
  find_library(CUDAQ_REALTIME_DISPATCH_LIBRARY
    NAMES cudaq-realtime-dispatch
    HINTS "${_cudaq_rt_lib_dir}"
    NO_DEFAULT_PATH)

  # cudaq-realtime-host-dispatch: required transitive dep of the bridge path.
  find_library(CUDAQ_REALTIME_HOST_DISPATCH_LIBRARY
    NAMES cudaq-realtime-host-dispatch
    HINTS "${_cudaq_rt_lib_dir}"
    NO_DEFAULT_PATH)

  if(HOLOLINK_CORE_LIB AND GPU_ROCE_TRANSCEIVER_LIB AND HOLOLINK_COMMON_LIB
      AND BASE_RECEIVER_OP_LIB AND DOCA_VERBS_LIB AND DOCA_GPUNETIO_LIB
      AND DOCA_COMMON_LIB AND CUDAQ_REALTIME_BRIDGE_HOLOLINK_LIBRARY
      AND CUDAQ_REALTIME_DISPATCH_LIBRARY AND CUDAQ_REALTIME_HOST_DISPATCH_LIBRARY)
    set(CUDAQ_GPU_ROCE_AVAILABLE TRUE CACHE INTERNAL
      "GPU RoCE transport component cudaq-qec-decoding-server-gpuroce available")
    # Under CMP0126 (NEW) the CACHE set above does NOT update the normal
    # variable initialized FALSE at the top of this file, and the normal
    # variable shadows the cache in this scope -- so the component gate
    # below would never fire.  Set the normal variable explicitly.
    set(CUDAQ_GPU_ROCE_AVAILABLE TRUE)
    message(STATUS
      "cudaq-qec-decoding-server-gpuroce: GPU RoCE ENABLED (core=${HOLOLINK_CORE_LIB})")
  else()
    message(STATUS
      "cudaq-qec-decoding-server: GPU RoCE DISABLED "
      "(missing one or more of: hololink_core gpu_roce_transceiver hololink "
      "base_receiver_op ibverbs doca_* cudaq-realtime-bridge-hololink "
      "cudaq-realtime-dispatch cudaq-realtime-host-dispatch)")
  endif()
else()
  message(STATUS
    "cudaq-qec-decoding-server: GPU RoCE DISABLED "
    "(HOLOSCAN_SENSOR_BRIDGE_BUILD_DIR or CUDAQ_REALTIME_INCLUDE_DIR not set)")
endif()

message(STATUS
  "cudaq-qec-decoding-server: CPU RoCE DISABLED (skeleton only; ibverbs implementation pending)")

# ---------------------------------------------------------------------------
# Core decoding server (always built): transport abstraction, session registry,
# per-decoder worker threads, RPC dispatcher.  No dependency on CUDAQ_REALTIME.
#
# Deliberately excludes GpuRoceTransceiver: consumers of this library (unit
# tests, the CQR plugin) must stay loadable on driverless machines, and the
# GPU RoCE deps (DOCA, the hololink bridge) require libcuda.so.1 at load
# time.  gpu_roce lives in the cudaq-qec-decoding-server-gpuroce component
# below, reached through a weak factory symbol (see DecodingServer.cpp).
# ---------------------------------------------------------------------------
add_library(cudaq-qec-decoding-server STATIC
  RoundAccumulator.cpp
  DecodingSession.cpp
  SessionRegistry.cpp
  RpcDispatcher.cpp
  DecodingServer.cpp
  CpuRoceTransceiver.cpp
)

target_compile_features(cudaq-qec-decoding-server PUBLIC cxx_std_20)

target_include_directories(cudaq-qec-decoding-server
  PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
    $<BUILD_INTERFACE:${CUDAQX_QEC_INCLUDE_DIR}>
    $<BUILD_INTERFACE:${_core_include_dir}>
    $<INSTALL_INTERFACE:include>
)

target_link_libraries(cudaq-qec-decoding-server
  PUBLIC
    # The decode-server core only needs the decoder interface + logger (in
    # cudaq-qec-decoders) and the realtime decoding config -- NOT the heavy
    # cudaq-qec (which pulls in libcustabilizer etc.). Keeping cudaq-qec here
    # violates the realtime-server dependency-closure contract.
    cudaq-qec-decoders
    cudaq-qec-realtime-decoding
  PRIVATE
    # DecodingSession worker threads pin themselves to their decoder's
    # cuda_device_id (cudaSetDevice).
    CUDA::cudart
)

set_target_properties(cudaq-qec-decoding-server PROPERTIES
  ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
  POSITION_INDEPENDENT_CODE ON
)

# NOTE: cudaq-qec-decoding-server is a STATIC archive consumed only at link
# time -- the decoding_server executable and the CQR plugin (.so) absorb its
# objects during their own link.  It is not needed at runtime and is not part
# of a public link-against-install SDK, so it is deliberately NOT installed.

# ---------------------------------------------------------------------------
# Optional GPU RoCE component: GpuRoceTransceiver plus the strong definition
# (GpuRoceFactory.cpp) of the factory that DecodingServer.cpp references
# weakly.  Kept out of the core library so core consumers carry no DOCA /
# Hololink / CUDA-driver runtime dependencies -- those .so's need
# libcuda.so.1 at load time, which driverless machines (CI containers) lack.
#
# Consumers must link this WHOLE_ARCHIVE: the only reference to the factory
# is weak, which does not pull archive members on its own.
# ---------------------------------------------------------------------------
if(CUDAQ_GPU_ROCE_AVAILABLE)
  add_library(cudaq-qec-decoding-server-gpuroce STATIC
    GpuRoceTransceiver.cpp
    GpuRoceFactory.cpp
  )

  target_compile_definitions(cudaq-qec-decoding-server-gpuroce
    PRIVATE CUDAQ_GPU_ROCE_AVAILABLE)

  target_include_directories(cudaq-qec-decoding-server-gpuroce PRIVATE
    "${CUDAQ_REALTIME_INCLUDE_DIR}"
    "${_doca_root}/include"
  )

  target_link_libraries(cudaq-qec-decoding-server-gpuroce
    PUBLIC
      cudaq-qec-decoding-server
      "${CUDAQ_REALTIME_BRIDGE_HOLOLINK_LIBRARY}"
      "${GPU_ROCE_TRANSCEIVER_LIB}"
      "${BASE_RECEIVER_OP_LIB}"
      "${HOLOLINK_CORE_LIB}"
      "${HOLOLINK_COMMON_LIB}"
      "${DOCA_VERBS_LIB}"
      "${DOCA_GPUNETIO_LIB}"
      "${DOCA_COMMON_LIB}"
      $<$<BOOL:${IBVERBS_LIB}>:${IBVERBS_LIB}>
      CUDA::cudart
      # libdoca_gpunetio.so and libcudaq-realtime-bridge-hololink.so reference
      # the CUDA Driver API (cu*); consumers of this static lib inherit that
      # dep, so link the driver here.  CUDA::cuda_driver resolves to the
      # toolkit's stubs in driverless build environments (CI containers).
      CUDA::cuda_driver
  )

  set_target_properties(cudaq-qec-decoding-server-gpuroce PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
    POSITION_INDEPENDENT_CODE ON
  )

  # NOTE: cudaq-qec-decoding-server-gpuroce is a STATIC archive consumed only
  # at link time (absorbed WHOLE_ARCHIVE into the decoding_server executable).
  # It is not needed at runtime, so it is deliberately NOT installed.

  # Link canary (never executed, not installed, not a test): a static
  # archive alone never resolves symbols, and the one real consumer
  # (decoding_server's gpu_roce block) is additionally gated on the
  # proprietary cudevice archive, which CI does not provision.  Without
  # this target, CI (HSB + DOCA present, no GPU driver) would compile
  # GpuRoceTransceiver.cpp but never validate its link against the
  # hololink / DOCA libraries.  The strong factory reference pulls the
  # component's members, and the component's PUBLIC deps (including the
  # CUDA driver stubs) complete the resolution.
  add_executable(cudaq-qec-decoding-server-gpuroce-linkcheck
    GpuRoceLinkCheck.cpp
  )
  target_link_libraries(cudaq-qec-decoding-server-gpuroce-linkcheck PRIVATE
    cudaq-qec-decoding-server-gpuroce
  )
endif()

# ---------------------------------------------------------------------------
# CQR host-dispatch plugin (only when CUDAQ device_call headers are available):
# CqrTransceiver bridges DeviceCallService handler callbacks to ITransceiver,
# then hands off to DecodingServer for session management and decoding.
# ---------------------------------------------------------------------------
if(CUDAQ_QEC_DEVICE_CALL_SERVICE_AVAILABLE)
  add_library(cudaq-qec-realtime-decoding-server-cqr SHARED
    decoding_server_cqr.cpp
  )

  target_compile_options(cudaq-qec-realtime-decoding-server-cqr
    PRIVATE -fvisibility=hidden -fvisibility-inlines-hidden)

  target_include_directories(cudaq-qec-realtime-decoding-server-cqr
    PUBLIC
      $<BUILD_INTERFACE:${CUDAQX_QEC_INCLUDE_DIR}>
      $<INSTALL_INTERFACE:${CUDAQ_INCLUDE_DIR}>
      $<INSTALL_INTERFACE:include>
    PRIVATE
      ${CMAKE_CURRENT_SOURCE_DIR}
      ${CUDAQ_REALTIME_INCLUDE_DIR}
      ${CUDAQ_DEVICE_CALL_INCLUDE_DIR}
      ${CUDAToolkit_INCLUDE_DIRS}
  )

  target_link_options(cudaq-qec-realtime-decoding-server-cqr PRIVATE
    $<$<CXX_COMPILER_ID:GNU>:-Wl,--exclude-libs,libcudaq-qec-decoding-server.a>
  )

  target_link_libraries(cudaq-qec-realtime-decoding-server-cqr
    PUBLIC
      cudaq-qec-realtime-decoding
    PRIVATE
      cudaq-qec-decoding-server
      cudaq::cudaq-common
      ${CUDAQ_DEVICE_CALL_RUNTIME_LIBRARY}
  )

  set(_server_cqr_build_rpath "${CMAKE_BINARY_DIR}/lib")
  set(_server_cqr_install_rpath
    "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}")
  if(_CUDAQ_REALTIME_LIB_DIR)
    list(APPEND _server_cqr_build_rpath "${_CUDAQ_REALTIME_LIB_DIR}")
    list(APPEND _server_cqr_install_rpath "${_CUDAQ_REALTIME_LIB_DIR}")
  endif()
  if(_CUDAQ_DEVICE_CALL_RUNTIME_LIB_DIR)
    list(APPEND _server_cqr_build_rpath "${_CUDAQ_DEVICE_CALL_RUNTIME_LIB_DIR}")
    list(APPEND _server_cqr_install_rpath
      "${_CUDAQ_DEVICE_CALL_RUNTIME_LIB_DIR}")
  endif()

  set_target_properties(cudaq-qec-realtime-decoding-server-cqr PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
    BUILD_RPATH "${_server_cqr_build_rpath}"
    INSTALL_RPATH "${_server_cqr_install_rpath}"
  )

  install(TARGETS cudaq-qec-realtime-decoding-server-cqr
    COMPONENT qec-lib
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
  )
endif()
